<resources>
    <string name="app_name">Wolfpak</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title">Post Your Howl!</string>
    <string name="nsfwstring">NSFW?</string>
    <string name="handle_hint">Handle</string>
    <string name="upload">Post</string>
    <string name="cancel">Cancel</string>

    <string name="dialog_flag_message">Enter Captcha Below To Report</string>
    <string name="dialog_flag_hint">Captcha</string>
    <string name="dialog_flag_cancel_button_text">Cancel</string>
    <string name="dialog_flag_report_button_text">Report</string>
    <string name="report_howl">Report</string>
    <string name="howl">howl</string>
    <string name="NoHowl">Sorry no one is howling right now! Tap to refresh. Feel free to view the leaderboard.</string>
    <string name="facebook_app_id">1604860893099435</string>
    <string name="test">test</string>
    <string name="dislike">DISLIKE</string>
    <string name="like">LIKE</string>
    <string name="view">view</string>
    <string name="img">imageview</string>

    <!--Strings for the Settings Screen-->

    <string name="title_activity_preferences">WolfPak Settings</string>
    <string name="misc_prefs">Things You Care About</string>
    <string name="terms_conditions">Things You Don\'t Care About</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_activity_termsofservice">Terms of Service</string>
    <string name="title_activity_privacypolicy">Privacy Policy</string>
    <string name="tutorial">Tutorial</string>
    <string name="contact">Contact Us</string>
    <string name="report">Report Bug</string>
    <string name="rate">Rate Us in the App Store</string>
    <string name="follow">Follow Us on Social Media</string>
    <string name="contact_us">mailto:support@wolfpakapp.com</string>
    <string name="summary">Follow Us on Social Media</string>
    <string name="default_summary">Which Platform?</string>
    <string name="share">Facebook</string>

    <string name="nsfw_switch_key">showNSFW</string>

    <!--End of Strings for the Settings Screen-->

    <!--Strings that associate the icons for social media -->

    <string-array name="iconName">
        <item>Facebook</item>
        <item>Twitter</item>
        <item>Instagram</item>
    </string-array>

    <string-array name="iconFile">
        <item>tinyfb</item>
        <item>twit</item>
        <item>insta</item>
    </string-array>


</resources>
